--- a/views/disableForm.ejs
+++ b/views/disableForm.ejs
@@ -863,48 +863,22 @@
       <section class="content">
         <div class="container">
           <div class="row justify-content-center">
-            <div class="col-9 ">
+            <div class="col-8 ">
               <form action="/save" method="post">
                 <div class="card card-info m-3">
                   <div class="card-header">
                     <h3 class="card-title">Employee Details</h3>
                   </div>
                   <div class="card-body">
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-id-card"></i></span>
+                    <% for(var [x,y] of Object.entries(editObject)) { %>
+                      <% if(x=="_id") { 
+                        continue;
+                      }  %> 
+                      <label for="<%= x %>"><%= x %> :</label>
+                      <div class="card">
+                        <input type="text" class="form-control" id="<%= x %>" placeholder="<%= x %>" name="<%= x %>" value="<%= y %>" readonly>
                       </div>
-                      <input type="text" class="form-control" id="id" placeholder="EmployeeId" name="id"
-                        value="<%= editObject.id %>" disabled>
-                    </div>
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control" id="ename" placeholder="Employee Name" name="ename"
-                        value="<%= editObject.ename %>" disabled>
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-user"></i></span>
-                      </div>
-                    </div>
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-briefcase"></i></span>
-                      </div>
-                      <input type="text" class="form-control" id="des" placeholder="Designation" name="des"
-                        value="<%= editObject.des %>" disabled>
-                    </div>
-                    <div class="input-group mb-3">
-                      <input type="text" class="form-control" id="loc" placeholder="Working Location" name="loc"
-                        value="<%= editObject.loc %>" disabled>
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-map-marker"></i></span>
-                      </div>
-                    </div>
-                    <div class="input-group mb-3">
-                      <div class="input-group-prepend">
-                        <span class="input-group-text"><i class="fa fa-calendar"></i></span>
-                      </div>
-                      <input type="text" class="form-control" id="jd" placeholder="Joining Date" name="jd"
-                        value="<%= editObject.jd %>" disabled>
-                    </div>
+                      <% } %>
                     <input type="hidden" id="monid" name="monid" value="<%= editObject._id %>">
 
                   </div>
@@ -1003,12 +977,12 @@
                     <div class="form-group">
                       <label for="achieverID">Achiever ID :</label>
                       <input type="text" name="achieverID" class="form-control" id="achieverID"
-                        value="<%= editObject.id %>" disabled>
+                        value="<%= editObject.EmpID %>" disabled>
                     </div>
                     <div class="form-group">
                       <label for="achieverName">Achiever Name :</label>
                       <input type="text" name="achieverName" class="form-control" id="achieverName"
-                        value="<%= editObject.ename %>" readonly="readonly">
+                        value="<%= editObject.Employee_Name %>" readonly="readonly">
                     </div>
                     <div class="form-group">
                       <label for="taskTitle">Task Title :</label>
@@ -1027,8 +1001,6 @@
 
               </div>
             </div>
-
-
           </div>
           <!-- /.col -->
         </div>
