--- a/views/login.ejs
+++ b/views/login.ejs
@@ -883,7 +883,7 @@
                   <div class="card-footer">
                     <p class="rext-center text-danger"><%= errDesc %></p>
                     <button type="submit" class="btn btn-primary">Submit</button><br>
-                    <p>If you are a user,<b><a href="/register">Sign in</a></b> Here</p>
+                    <p>If you are not a user, <b><a href="/register">Sign in</a></b> Here</p>
                   </div>
                 </form>
               </div>
