Comparision Charts and Analytics models

--- a/views/disableForm.ejs
+++ b/views/disableForm.ejs
@@ -853,7 +853,8 @@
             <div class="col-sm-4">
               <h1 class="m-0">Dashboard</h1>
             </div><!-- /.col -->
-            <div class="col-md-1 offset-md-7">
+            <div class="col-md-3 offset-md-5">
+              <button class="btn btn-warning" onclick="window.location.href='/CompareAnalytics/<%= editObject._id %>'">ANALYTICS REPORT</button>
               <button class="btn btn-danger" onclick="window.location.href='/logout'">Logout</button>
             </div><!-- /.col -->
           </div><!-- /.row -->
