--- a/views/compareCharts.ejs
+++ b/views/compareCharts.ejs
@@ -859,18 +859,11 @@
                     </div>
                     <div class="container">
                         <p>
-                            <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1"
-                                role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Polar Area
-                                Graph</a>
+                            
                             <button class="btn btn-primary" type="button" data-toggle="collapse"
-                                data-target="#multiCollapseExample2" aria-expanded="false"
-                                aria-controls="multiCollapseExample2">Bar Graph</button>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse"
-                                data-target="#multiCollapseExample3" aria-expanded="false"
-                                aria-controls="multiCollapseExample3">Doughnut Chart</button>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse"
-                                data-target="#multiCollapseExample4" aria-expanded="false"
-                                aria-controls="multiCollapseExample4">Line Graph</button>
+                                data-target="#multiCollapseExample1" aria-expanded="false"
+                                aria-controls="multiCollapseExample1">Bar Graph</button>
+                            
                             <button class="btn btn-primary" type="button" data-toggle="collapse"
                                 data-target=".multi-collapse" aria-expanded="false"
                                 aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both
@@ -881,27 +874,6 @@
                                 <div class="collapse multi-collapse" id="multiCollapseExample1">
                                     <div class="card card-body" style="height: 30rem;">
                                         <canvas id="myChart1"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample2">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart2"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample3">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart3"></canvas>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-12">
-                                <div class="collapse multi-collapse" id="multiCollapseExample4">
-                                    <div class="card card-body" style="height: 30rem;">
-                                        <canvas id="myChart4"></canvas>
                                     </div>
                                 </div>
                             </div>
@@ -922,24 +894,33 @@
     </div>
     <script>
         const ctx1 = document.getElementById('myChart1');
-        const ctx2 = document.getElementById('myChart2');
-        const ctx3 = document.getElementById('myChart3');
-        const ctx4 = document.getElementById('myChart4');
         var data = []
         var labels = []
+        var avgResults=[]
         for (var x of '<%= dataSet %>'.split(',')) {
             data.push(x);
         }
         for (var x of '<%= labels %>'.split(',')) {
             labels.push(x);
         }
+        for (var x of '<%= avgResults %>'.split(',')) {
+            avgResults.push(x);
+        }
+        console.log(avgResults)
         var dataObj = {
             labels: labels,
-            datasets: [{
-                label: "Employees",
-                backgroundColor: ["#3e95cd", "#8e5ea2", "#3cba9f", "#e8c3b9", "#c45850", "#34d8eb"],
-                data: data
-            }]
+            datasets: [
+                {
+                    label:'Current Employee',
+                    backgroundColor: "#3e95cd",
+                    data: data
+                }, {
+                    label: "Average of Employee",
+                    backgroundColor: "#8e5ea2",
+                    data: avgResults
+                }
+
+            ]
         }
         var optionsObj = {
             maintainAspectRatio: false,
@@ -949,22 +930,7 @@
             }
         }
         new Chart(ctx1, {
-            type: 'polarArea',
-            data: dataObj,
-            options: optionsObj
-        });
-        new Chart(ctx2, {
             type: 'bar',
-            data: dataObj,
-            options: optionsObj
-        });
-        new Chart(ctx3, {
-            type: 'doughnut',
-            data: dataObj,
-            options: optionsObj
-        });
-        new Chart(ctx4, {
-            type: 'line',
             data: dataObj,
             options: optionsObj
         });
