--- a/views/login.ejs
+++ b/views/login.ejs
@@ -31,7 +31,6 @@
 
 <body class="hold-transition sidebar-mini layout-fixed">
   <div class="wrapper">
-
     <nav class="main-header navbar navbar-expand-lg navbar-light bg-info">
       <i class="fa fa-home fa-lg"></i><a class="navbar-brand" href="/home">Home</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -83,7 +82,7 @@
             <div class="col-8">
               <div class="card card-primary mt-5">
                 <div class="card-header">
-                  <h3 class="card-title">Quick Example</h3>
+                  <h3 class="card-title">Login</h3>
                 </div>
                 <!-- /.card-header -->
                 <!-- form start -->
