--- a/views/charts.ejs
+++ b/views/charts.ejs
@@ -82,7 +82,7 @@
         <div class="content-wrapper">
             <section class="content">
                 <div class="container-fluid">
-                    <div class="jumbotron jumbotron-fluid bg-info">
+                    <div class="jumbotron jumbotron-fluid bg-gradient-secondary">
                         <div class="container">
                             <h1 class="display-4 font-weight-bold">Analytics</h1>
                             <p class="lead font-weight-bold">Based on the Human Resource Data of an Organization</p>
@@ -90,21 +90,21 @@
                     </div>
                     <div class="container">
                         <p>
-                            <a class="btn btn-primary" data-toggle="collapse" href="#multiCollapseExample1"
+                            <a class="btn btn-info" data-toggle="collapse" href="#multiCollapseExample1"
                                 role="button" aria-expanded="false" aria-controls="multiCollapseExample1">Polar Area
                                 Graph</a>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            <button class="btn btn-info" type="button" data-toggle="collapse"
                                 data-target="#multiCollapseExample2" aria-expanded="false"
                                 aria-controls="multiCollapseExample2">Bar Graph</button>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            <button class="btn btn-info" type="button" data-toggle="collapse"
                                 data-target="#multiCollapseExample3" aria-expanded="false"
                                 aria-controls="multiCollapseExample3">Doughnut Chart</button>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            <button class="btn btn-info" type="button" data-toggle="collapse"
                                 data-target="#multiCollapseExample4" aria-expanded="false"
                                 aria-controls="multiCollapseExample4">Line Graph</button>
-                            <button class="btn btn-primary" type="button" data-toggle="collapse"
+                            <button class="btn btn-info" type="button" data-toggle="collapse"
                                 data-target=".multi-collapse" aria-expanded="false"
-                                aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle both
+                                aria-controls="multiCollapseExample1 multiCollapseExample2">Toggle All
                                 Graps</button>
                         </p>
                         <div class="row">
