--- a/views/compareCharts.ejs
+++ b/views/compareCharts.ejs
@@ -81,7 +81,7 @@
         <div class="content-wrapper">
             <section class="content">
                 <div class="container-fluid">
-                    <div class="jumbotron jumbotron-fluid bg-info">
+                    <div class="jumbotron jumbotron-fluid bg-warning">
                         <div class="container">
                             <h1 class="display-4 font-weight-bold">Analytics</h1>
                             <p class="lead font-weight-bold">Based on the Human Resource Data of an Organization</p>
