--- a/views/compareCharts.ejs
+++ b/views/compareCharts.ejs
@@ -53,7 +53,6 @@
                 </div>
                 <div class="container">
                     <p>
-
                         <button class="btn btn-primary" type="button" data-toggle="collapse"
                             data-target="#multiCollapseExample1" aria-expanded="false"
                             aria-controls="multiCollapseExample1">Bar Graph</button>
@@ -74,50 +73,51 @@
         </section>
     </div>
 
-    <%- include("partials/footer") -%> 
+    <%- include("partials/footer") -%>
 
-    <script>
-        const ctx1 = document.getElementById('myCompareChart');
-        var data = []
-        var labels = []
-        var avgResults = []
-        for (var x of '<%= dataSet %>'.split(',')) {
-            data.push(x);
-        }
-        for (var x of '<%= labels %>'.split(',')) {
-            labels.push(x);
-        }
-        for (var x of '<%= avgResults %>'.split(',')) {
-            avgResults.push(x);
-        }
-        var dataObj = {
-            labels: labels,
-            datasets: [
-                {
-                    label: 'Current Employee',
-                    backgroundColor: "#3e95cd",
-                    data: data
-                }, {
-                    label: "Average of Employee",
-                    backgroundColor: "#8e5ea2",
-                    data: avgResults
-                }
-
-            ]
-        }
-        var optionsObj = {
-            maintainAspectRatio: false,
-            title: {
-                display: true,
-                text: 'Predicted world population (millions) in 2050'
+        <script>
+            const ctx1 = document.getElementById('myCompareChart');
+            var data = []
+            var labels = []
+            var avgResults = []
+            for (var x of '<%= dataSet %>'.split(',')) {
+                data.push(x);
             }
-        }
-        new Chart(ctx1, {
-            type: 'bar',
-            data: dataObj,
-            options: optionsObj
-        });
-    </script>
-    </body>
+            for (var x of '<%= labels %>'.split(',')) {
+                labels.push(x);
+            }
+            for (var x of '<%= avgResults %>'.split(',')) {
+                avgResults.push(x);
+            }
+            var dataObj = {
+                labels: labels,
+                datasets: [
+                    {
+                        label: ('<%= mode %>' == '1vs1Compare') ? '<%= emp1_Id %>' : "Current Employee",
+                        backgroundColor: "#3e95cd",
+                        data: data
+                    }, {
+                        label: ('<%= mode %>' == '1vs1Compare') ? '<%= emp2_Id %>' : "Average of Employee",
+                        backgroundColor: "#8e5ea2",
+                        data: avgResults
+                    }
 
-    </html>
+                ]
+            }
+            var optionsObj = {
+                maintainAspectRatio: false,
+                title: {
+                    display: true,
+                    text: 'Predicted world population (millions) in 2050'
+                }
+            }
+            new Chart(ctx1, {
+                type: 'bar',
+                data: dataObj,
+                options: optionsObj
+            });
+        </script> -->
+
+        </body>
+
+</html>
