--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-  
+
 <%- include("partials/header") -%>
 
   <aside class="main-sidebar sidebar-dark-primary elevation-4">
@@ -43,7 +43,7 @@
   <div class="content-wrapper">
     <section class="content">
 
-      <!-- modal -->
+      <!--analytics modal -->
       <div class="modal fade" id="analyticsModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
         aria-hidden="true">
         <div class="modal-dialog" role="document">
@@ -82,6 +82,41 @@
         </div>
       </div>
 
+      <!-- 1vs1 analytics Modal -->
+      <div class="modal fade" id="1vs1Modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog" role="document">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">1 Vs 1 Mode</h5>
+              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-body">
+              <form action="/1vs1Analytics" method="post">
+                <div class="form-group">
+                  <label for="emp1">Employee_1 ID</label><br>
+                  <input type="text" id="emp1" name="emp1" placeholder="Enter Employee ID" class="form-control"
+                    onchange="validate('emp1','1')" autocomplete="false" required>
+                </div>
+                <small id="errTag1" class="text-danger font-weight-bold"></small>
+                <div class="form-group">
+                  <label for="emp2">Employee_2 ID</label><br>
+                  <input type="text" id="emp2" name="emp2" placeholder="Enter Employee ID" class="form-control"
+                    onchange="validate('emp2','2')" autocomplete="false" required>
+                </div>
+                <small id="errTag2" class="text-danger font-weight-bold"></small>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+              <button type="submit" class="btn btn-primary">Proceed</button>
+            </div>
+            </form>
+          </div>
+        </div>
+      </div>
+
       <div class="jumbotron d-flex align-items-center min-vh-100">
         <div class="container">
           <div class="row mb-10"></div>
@@ -105,9 +140,9 @@
             </div>
             <div class="col-md-3">
               <div class="card" style="width: 13rem;">
-                <img class="card-img-top" src="images/compensation.png" alt="Card image cap">
+                <img class="card-img-top" src="images/1vs1.png" alt="Card image cap">
                 <div class="card-body">
-                  <a href="#" class="btn btn-primary">Compensation</a>
+                  <a href="/1vs1" data-target="#1vs1Modal" data-toggle="modal" class="btn btn-primary">1 vs 1</a>
                 </div>
               </div>
             </div>
@@ -129,7 +164,31 @@
     <!-- /.content -->
   </div>
 
-<%- include("partials/footer") -%>
+  <%- include("partials/footer") -%>
 
-  </body>
+    <script>
+
+      function validate(empID, num) {
+        var emp = $('#' + empID).val();
+        $.ajax(
+          {
+            url: '/validateIDs',
+            method: 'post',
+            dataType: 'json',
+            data: {
+              'empID': emp,
+            },
+            success: function (response) {
+              $('#errTag' + num).html(response['errMsg'])
+            },
+            error: function (response) {
+              alert("Server Error Occured")
+            }
+          }
+        )
+      }
+
+    </script>
+    </body>
+
 </html>
