--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -59,15 +59,10 @@
 
 <script>
     $(function () {
-      $('#example2').DataTable({
-        "paging": true,
-        "lengthChange": false,
-        "searching": false,
-        "ordering": true,
-        "info": true,
-        "autoWidth": false,
-        "responsive": false,
-      });
+      $("#example2").DataTable({
+      "responsive": true, "lengthChange": false, "autoWidth": false,
+      "buttons": ["copy", "csv", "excel", "pdf", "print", "colvis"]
+    }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
     });
     $("tr").click(function () {
       var tableLen = $("table tr").length;
