--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,91 +1,136 @@
 <!DOCTYPE html>
 <html lang="en">
 
-  <%- include("partials/header") -%>
+<%- include("partials/header") -%>
 
-    <aside class="main-sidebar sidebar-dark-primary elevation-4">
-      <!-- Brand Logo -->
-      <a href="#" class="brand-link">
-        <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
-          style="opacity: .8">
-        <span class="brand-text font-weight-light">Analytics</span>
-      </a>
+  <aside class="main-sidebar sidebar-dark-primary elevation-4">
+    <!-- Brand Logo -->
+    <a href="#" class="brand-link">
+      <img src="dist/img/AdminLTELogo.png" alt="AdminLTE Logo" class="brand-image img-circle elevation-3"
+        style="opacity: .8">
+      <span class="brand-text font-weight-light">Analytics</span>
+    </a>
 
-      <!-- Sidebar -->
-      <div class="sidebar">
-        <!-- Sidebar user panel (optional) -->
-        <div class="user-panel mt-3 pb-3 mb-3 d-flex">
-          <div class="image">
-            <img src="images/user.png" class="img-circle elevation-2" alt="User Image">
-          </div>
-          <div class="info">
-            <a href="#" class="d-block">NEW USER</a>
-          </div>
+    <!-- Sidebar -->
+    <div class="sidebar">
+      <!-- Sidebar user panel (optional) -->
+      <div class="user-panel mt-3 pb-3 mb-3 d-flex">
+        <div class="image">
+          <img src="images/user.png" class="img-circle elevation-2" alt="User Image">
         </div>
-
-        <!-- SidebarSearch Form -->
-        <div class="form-inline">
-          <div class="input-group" data-widget="sidebar-search">
-            <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
-            <div class="input-group-append">
-              <button class="btn btn-sidebar">
-                <i class="fas fa-search fa-fw"></i>
-              </button>
-            </div>
-          </div>
+        <div class="info">
+          <a href="#" class="d-block">NEW USER</a>
         </div>
-        <!-- /.sidebar-menu -->
       </div>
-      <!-- /.sidebar -->
-    </aside>
 
-    <div class="content-wrapper">
-      <section class="content">
-        <div class="container">
-          <div class="row">
-            <div class="col-8">
-              <div class="card card-primary mt-5">
-                <div class="card-header">
-                  <h3 class="card-title">Login</h3>
-                </div>
-                <!-- /.card-header -->
-                <!-- form start -->
-                <form method="post" action="/">
-                  <div class="card-body">
-                    <div class="form-group">
-                      <label for="exampleInputEmail1">Email address</label>
-                      <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email"
-                        name="email">
-                    </div>
-                    <div class="form-group">
-                      <label for="exampleInputPassword1">Password</label>
-                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password"
-                        name="password">
-                    </div>
-                  </div>
-                  <!-- /.card-body -->
-
-                  <div class="card-footer">
-                    <p class="rext-center text-danger">
-                      <%= errDesc %>
-                    </p>
-                    <button type="submit" class="btn btn-primary">Submit</button><br>
-                    <p>If you are not a user, <b><a href="/register">Sign in</a></b> Here</p>
-                  </div>
-                </form>
-              </div>
-
-            </div>
-            <!-- /.col -->
+      <!-- SidebarSearch Form -->
+      <div class="form-inline">
+        <div class="input-group" data-widget="sidebar-search">
+          <input class="form-control form-control-sidebar" type="search" placeholder="Search" aria-label="Search">
+          <div class="input-group-append">
+            <button class="btn btn-sidebar">
+              <i class="fas fa-search fa-fw"></i>
+            </button>
           </div>
-          <!-- /.row -->
         </div>
-        <!-- /.container-fluid -->
-      </section>
-      <!-- /.content -->
+      </div>
+      <!-- /.sidebar-menu -->
     </div>
+    <!-- /.sidebar -->
+  </aside>
 
-    <%- include("partials/footer") -%>
+  <div class="content-wrapper">
+    <section class="content">
+      <div class="container">
+        <div class="row">
+          <div class="col-8">
+            <div class="card card-primary mt-5">
+              <div class="card-header">
+                <h3 class="card-title">Login</h3>
+              </div>
+              <!-- /.card-header -->
+              <!-- form start -->
+              <form>
+                <div class="card-body">
+                  <div class="form-group">
+                    <label for="email">Email address</label>
+                    <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                    <small class="text-danger font-weight-bold" id="emailErr"></small>
+                  </div>
+                  <div class="form-group">
+                    <label for="password">Password</label>
+                    <input type="password" class="form-control" id="password" placeholder="Password" name="password" required>
+                  </div>
+                </div>
+                <!-- /.card-body -->
 
-  </body>
+                <div class="card-footer">
+                  <small class="text-danger font-weight-bold" id="loginErr"></small><br>
+                  <button type="button" id="submitBtn" class="btn btn-primary">Submit</button><br>
+                  <p>If you are not a user, <b><a href="/register">Sign in</a></b> Here</p>
+                </div>
+              </form>
+            </div>
+
+          </div>
+          <!-- /.col -->
+        </div>
+        <!-- /.row -->
+      </div>
+      <!-- /.container-fluid -->
+    </section>
+    <!-- /.content -->
+  </div>
+
+  <%- include("partials/footer") -%>
+
+    <script>
+
+      // AJAX for login
+
+      $('#submitBtn').click(function(){
+        $.ajax({
+          url:"/",
+          method:"post",
+          dataType:"json",
+          data:{
+            email:$('#email').val(),
+            password:$("#password").val()
+          },
+          success:function(res){
+            if(res.msg=="success"){
+              window.location.href="/home"
+            }
+            else{
+              $('#loginErr').html(res.msg)
+            }
+          },
+          error:function(){
+            alert("Server not responding")
+          }
+        })
+      })
+
+      // AJAX for email
+
+      $('#email').change(function () {
+        $.ajax({
+          url:"/validateEmail/login",
+          method: 'post',
+          dataType:'json',
+          data:{
+            email:this.value
+          },
+          success:function(res){
+            $('#emailErr').html(res.msg)
+          },
+          error:function(){
+            alert("Server not responding")
+          }
+        })
+      })
+
+    </script>
+    </body>
+
 </html>
