--- a/views/home.ejs
+++ b/views/home.ejs
@@ -56,7 +56,6 @@
             </div>
             <div class="modal-body">
               <form action="/analytics" method="get">
-                <div class="form-group">
                   <label for="analyticsType">Select one from below</label>
                   <select id="analyticsType" name="analyticsType" class="form-control">
                     <option value="ManagerName">Managers Wise Count</option>
@@ -70,8 +69,6 @@
                     <option value="Department">Department Wise Count</option>
                     <option value="EmploymentStatus">Employment Status Info</option>
                   </select>
-                </div>
-
             </div>
             <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
@@ -150,7 +147,7 @@
               <div class="card" style="width: 13rem;">
                 <img class="card-img-top" src="images/helpdesk.png" alt="Card image cap">
                 <div class="card-body">
-                  <a href="#" class="btn btn-primary">HelpDesk</a>
+                  <a href="/deptartment_Analytics_Page" class="btn btn-primary">Dept. Analytics</a>
                 </div>
               </div>
             </div>
