--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,6 +37,18 @@
           </div>
         </div>
         <!-- /.sidebar-menu -->
+
+        <nav class="mt-3">
+          <ul class="nav nav-pills nav-sidebar flex-column" data-widget="treeview" role="menu" data-accordion="false">
+            <li class="nav-item">
+                  <button class="btn btn-info btn-block" onclick="window.location.href='/form'">ADD EMPLOYEE</button>
+            </li>
+            <li class="nav-item mt-1">
+                <button class="btn btn-danger btn-block" onclick="window.location.href='/logout'">Logout</button>
+          </li>
+          </ul>
+        </nav>
+
       </div>
       <!-- /.sidebar -->
     </aside>
@@ -82,14 +94,12 @@
             <div class="col-sm-4">
               <h1 class="m-0">Dashboard</h1>
             </div><!-- /.col -->
-            <div class="col-md-3 offset-md-4">
+            <div class="col-md-1 offset-md-4">
               <% if(mode=="trashbin" ){ %>
                 <button class="btn btn-success" onclick="window.location.href='/data'">DataTable</button>
                 <% } else { %>
-                  <button class="btn btn-info" onclick="window.location.href='/form'">ADD EMPLOYEE</button>
                   <button class="btn btn-dark" onclick="window.location.href='/trash'">Trash Bin</button>
                   <% } %>
-                    <button class="btn btn-danger" onclick="window.location.href='/logout'">Logout</button>
             </div><!-- /.col -->
           </div><!-- /.row -->
         </div><!-- /.container-fluid -->
