--- a/views/home.ejs
+++ b/views/home.ejs
@@ -140,7 +140,7 @@
               <div class="card" style="width: 13rem;">
                 <img class="card-img-top" src="images/performance.png" alt="Card image cap">
                 <div class="card-body">
-                  <a href="/analytics" class="btn btn-primary" data-toggle="modal"
+                  <a class="btn btn-primary" data-toggle="modal"
                     data-target="#analyticsModal">Performance</a>
                 </div>
               </div>
