--- a/views/login.ejs
+++ b/views/login.ejs
@@ -90,7 +90,7 @@
 
       $('#submitBtn').click(function(){
         $.ajax({
-          url:"/",
+          url:"/login",
           method:"post",
           dataType:"json",
           data:{
