--- a/views/disableForm.ejs
+++ b/views/disableForm.ejs
@@ -73,8 +73,7 @@
                 </div>
                 <div class="col-md-2">
                   <div class=" mr-2 ml-2">
-                    <button id="taskFinishedButton" class="btn btn-primary" style="display:none;">Tasks
-                      Finised</button>
+                    <button id="taskFinishedButton" class="btn btn-primary" style="display:none;">Tasks Finised</button>
                   </div>
 
                 </div>
@@ -105,7 +104,7 @@
                             <%= tasks[i].taskDesc %>
                           </p>
                         </div>
-                        <form action="/task/alive/<%= tasks[i].achieverID %>/<%= tasks[i]._id %>" method="post">
+                        <form action="/tasks/alive/<%= tasks[i].achieverID %>/<%= tasks[i]._id %>" method="post">
                           <div class="card-footer d-flex justify-content-center align-items-center btn-sm "
                             style="background-color:white;">
                             <button type="submit"" class=" btn btn-primary">Finish</button>
@@ -149,7 +148,7 @@
                   <h3>Create New Task :</h3>
                 </div>
                 <div class="col-9">
-                  <form class="p-3" action="/task/create/<%= editObject._id %>" method="post">
+                  <form class="p-3" action="/tasks/create/<%= editObject._id %>" method="post">
                     <div class="form-group">
                       <label for="achieverID">Achiever ID :</label>
                       <input type="text" name="achieverID" class="form-control" id="achieverID"
